fixed one star alignment

--- a/main.css
+++ b/main.css
@@ -529,7 +529,6 @@ body{
     line-height: 24px;
     letter-spacing: -0.02em;
     color: #303031;
-    padding: 0.35rem;
 }
 
 .info3-person-card-ration{
